Overflow hidden in CSS to resolve blank space on the right on mobile devices

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -22,6 +22,7 @@ html {
 
 section {
     padding: 3.9rem 0;
+    overflow: hidden;
 }
 
 img {
